update php mapping

--- a/LaunchRocket/homebrew-mapping.plist
+++ b/LaunchRocket/homebrew-mapping.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>homebrew.mxcl.php</key>
+	<string>php-fpm.png</string>
 	<key>homebrew.mxcl.redis</key>
 	<string>redis.png</string>
 	<key>homebrew.mxcl.mongodb</key>
