major updates to servicemanager

--- a/LaunchRocket/LaunchRocket-Info.plist
+++ b/LaunchRocket/LaunchRocket-Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>0.5</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013 Josh Butts. All rights reserved.</string>
+	<string></string>
 	<key>NSMainNibFile</key>
 	<string>LaunchRocket</string>
 	<key>NSPrefPaneIconFile</key>
